# cpp-iem

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.txt  brew.txt  build-cmake.sh  build-waf.sh  build.sh  wscript
.travis/: before_install.sh  install_boost.sh
conf/: login_example.json  markets.json
src/: CMakeLists.txt  debug.hpp  jsoncpp.cpp  main.cpp  strategy.cpp  strategy.hpp  wscript
src/iem/: CMakeLists.txt  config.cpp  config.hpp  contract.cpp  contract.hpp  event_strategy.cpp  event_strategy.hpp  executedorder.cpp  executedorder.hpp  fatfinger_strategy.cpp  fatfinger_strategy.hpp  logger.cpp  logger.hpp  message.cpp  message.hpp  order.cpp  order.hpp  orderbook.cpp  orderbook.hpp  price.cpp  price.hpp  pricetimelimit.cpp  pricetimelimit.hpp  session.cpp  session.hpp  side.cpp  side.hpp  signal.cpp  signal.hpp  signalmanager.cpp  signalmanager.hpp  trader_message.cpp  trader_message.hpp
src/iem/signal/: againstsignal.cpp  againstsignal.hpp  arbitragesignal.hpp  constantsignal.cpp  constantsignal.hpp  constraintsignal.hpp  lastfillsignal.cpp  lastfillsignal.hpp  logisticfunctionsignal.cpp  logisticfunctionsignal.hpp  logonvaluesignal.cpp  logonvaluesignal.hpp  marketpricesumsignal.hpp  netpositionsignal.hpp  numcontractsatpricesignal.cpp  numcontractsatpricesignal.hpp  nummarketorderssignal.cpp  nummarketorderssignal.hpp  numorderbookupdatesignal.cpp  numorderbookupdatesignal.hpp  numordersatpricesignal.cpp  numordersatpricesignal.hpp  numordersignal.cpp  numordersignal.hpp  outstandingquantitysignal.cpp  outstandingquantitysignal.hpp  positionsignal.cpp  positionsignal.hpp  pricesignal.cpp  pricesignal.hpp  prioritysignal.cpp  prioritysignal.hpp  signalfwd.cpp  signalfwd.hpp  ticksinsidebestsignal.cpp  ticksinsidebestsignal.hpp  ticksoutsidesignal.cpp  ticksoutsidesignal.hpp  toppricesignal.cpp  toppricesignal.hpp
src/json/: CMakeLists.txt  json.h
src/rule/: bundlerulemanager.cpp  bundlerulemanager.hpp  pricerulevisitor.cpp  pricerulevisitor.hpp  rulemanager.cpp  rulemanager.hpp
src/strategy/: common.cpp  common.hpp
test/: CMakeLists.txt  wscript
test/iem/: CMakeLists.txt  config_test.cpp  contract_test.cpp  event_strategy_test.cpp  message_test.cpp  order_test.cpp  price_test.cpp  pricetimelimit_test.cpp  session_test.cpp  side_test.cpp  trader_message_test.cpp
